@@ -74,6 +74,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
   - Re-added some missing configure flags for the MySQL and PostgreSQL modules
   - Renamed module occurrences of 'valias' to 'native valias'
   - Fixed a missing variable in PostgreSQL module with SQL logging enabled
+  - Fixed bounds issue and updated buffer size in auth_munch_domain in backend modules that define it
 
   Manvendra Bhangui <mbhangui@users.sourceforge.net>
   - Added vmoddomain
